Cleaned up notebooks

--- a/notebooks/usage.ipynb
+++ b/notebooks/usage.ipynb
@@ -4,12 +4,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Autoreload"
+    "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from taxifare.trainer import Trainer\n",
+    "from taxifare.paramtrainer import ParamTrainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,9 +70,9 @@
     }
    ],
    "source": [
-    "from taxifare.trainer import Trainer\n",
     "trainer = Trainer()\n",
     "fitted_pipeline = trainer.train()\n",
+    "\n",
     "fitted_pipeline"
    ]
   },
@@ -216,7 +235,7 @@
     "    random_forest = dict(\n",
     "        line_count = 1_000,\n",
     "        hyper_params = dict(\n",
-    "            features__distance__distancetransformer__distance_type = [\"euclidian\", \"manhattan\"],\n",
+    "            features__distance__distancetransformer__distance_type = ['euclidian', 'manhattan'],\n",
     "            features__distance__standardscaler__with_mean = [True, False],\n",
     "            model__max_depth = [1, 2, 3]\n",
     "        )\n",
@@ -224,16 +243,17 @@
     "    linear_regression = dict(\n",
     "        line_count = 1_000,\n",
     "        hyper_params = dict(\n",
-    "            features__distance__distancetransformer__distance_type = [\"euclidian\", \"manhattan\"],\n",
+    "            features__distance__distancetransformer__distance_type = ['euclidian', 'manhattan'],\n",
     "            features__distance__standardscaler__with_mean = [True, False],\n",
     "            model__normalize = [True, False]\n",
     "        )\n",
     "    )\n",
     ")\n",
     "\n",
-    "from taxifare.paramtrainer import ParamTrainer\n",
+    "\n",
     "param_trainer = ParamTrainer()\n",
     "models = param_trainer.train(params)\n",
+    "\n",
     "models"
    ]
   },
@@ -273,7 +293,7 @@
     }
    ],
    "source": [
-    "models[\"random_forest\"].__dict__.keys()"
+    "models['random_forest'].__dict__.keys()"
    ]
   },
   {
@@ -293,7 +313,7 @@
     }
    ],
    "source": [
-    "models[\"random_forest\"].best_score_"
+    "models['random_forest'].best_score_"
    ]
   },
   {
@@ -315,7 +335,7 @@
     }
    ],
    "source": [
-    "models[\"random_forest\"].best_params_"
+    "models['random_forest'].best_params_"
    ]
   },
   {
@@ -345,7 +365,7 @@
     }
    ],
    "source": [
-    "models[\"random_forest\"].best_estimator_"
+    "models['random_forest'].best_estimator_"
    ]
   },
   {
@@ -365,7 +385,7 @@
     }
    ],
    "source": [
-    "models[\"linear_regression\"].best_score_"
+    "models['linear_regression'].best_score_"
    ]
   },
   {
@@ -387,7 +407,7 @@
     }
    ],
    "source": [
-    "models[\"linear_regression\"].best_params_"
+    "models['linear_regression'].best_params_"
    ]
   },
   {
@@ -417,7 +437,7 @@
     }
    ],
    "source": [
-    "models[\"linear_regression\"].best_estimator_"
+    "models['linear_regression'].best_estimator_"
    ]
   }
  ],
@@ -441,7 +461,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  }
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
