--- a/notebooks/boilerplate.ipynb
+++ b/notebooks/boilerplate.ipynb
@@ -51,11 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data():\n",
-    "    url = 's3://wagon-public-datasets/taxi-fare-train.csv'\n",
-    "    data = pd.read_csv(url, nrows = 100)\n",
+    "# def get_data():\n",
+    "#     url = 's3://wagon-public-datasets/taxi-fare-train.csv'\n",
+    "#     data = pd.read_csv(url, nrows = 100)\n",
     "\n",
-    "    return data"
+    "#     return data"
    ]
   },
   {
@@ -200,45 +200,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_data(data):\n",
-    "    # Removing any rows containing NaN\n",
-    "    data = data.dropna(axis = 'rows')\n",
+    "# def clean_data(data):\n",
+    "#     # Removing any rows containing NaN\n",
+    "#     data = data.dropna(axis = 'rows')\n",
     "\n",
-    "    # Keeping lat/lon that are not zero\n",
-    "    condition = (data.dropoff_latitude != 0) | (data.dropoff_longitude != 0)\n",
-    "    data = data[condition]\n",
+    "#     # Keeping lat/lon that are not zero\n",
+    "#     condition = (data.dropoff_latitude != 0) | (data.dropoff_longitude != 0)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    condition = (data.pickup_latitude != 0) | (data.pickup_longitude != 0)\n",
-    "    data = data[condition]\n",
+    "#     condition = (data.pickup_latitude != 0) | (data.pickup_longitude != 0)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    # If fare_amount is in the columns, keep only the ones\n",
-    "    # between 0 and 4000\n",
-    "    if 'fare_amount' in list(data):\n",
-    "        condition = data.fare_amount.between(0, 4000)\n",
-    "        data = data[condition]\n",
+    "#     # If fare_amount is in the columns, keep only the ones\n",
+    "#     # between 0 and 4000\n",
+    "#     if 'fare_amount' in list(data):\n",
+    "#         condition = data.fare_amount.between(0, 4000)\n",
+    "#         data = data[condition]\n",
     "        \n",
-    "    # Keep only rows where passenger_count is strictly below 8\n",
-    "    # and above 8\n",
-    "    condition = data.passenger_count < 8\n",
-    "    data = data[condition]\n",
+    "#     # Keep only rows where passenger_count is strictly below 8\n",
+    "#     # and above 8\n",
+    "#     condition = data.passenger_count < 8\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    condition = data.passenger_count >= 1\n",
-    "    data = data[condition]\n",
+    "#     condition = data.passenger_count >= 1\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    # Limiting the coordinates\n",
-    "    condition = data['pickup_latitude'].between(left = 40, right = 42)\n",
-    "    data = data[condition]\n",
+    "#     # Limiting the coordinates\n",
+    "#     condition = data['pickup_latitude'].between(left = 40, right = 42)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    condition = data['pickup_longitude'].between(left = -74.3, right = -72.9)\n",
-    "    data = data[condition]\n",
+    "#     condition = data['pickup_longitude'].between(left = -74.3, right = -72.9)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    condition = data['dropoff_latitude'].between(left = 40, right = 42)\n",
-    "    data = data[condition]\n",
+    "#     condition = data['dropoff_latitude'].between(left = 40, right = 42)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    condition = data['dropoff_longitude'].between(left = -74, right = -72.9)\n",
-    "    data = data[condition]\n",
+    "#     condition = data['dropoff_longitude'].between(left = -74, right = -72.9)\n",
+    "#     data = data[condition]\n",
     "\n",
-    "    return data"
+    "#     return data"
    ]
   },
   {
@@ -303,10 +303,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = data.drop('fare_amount', axis = 1)\n",
-    "y_train = data['fare_amount']\n",
+    "# X_train = data.drop('fare_amount', axis = 1)\n",
+    "# y_train = data['fare_amount']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size = .1)"
+    "# X_train, X_test, y_train, y_test = train_test_split(X_train, y_train, test_size = .1)"
    ]
   },
   {
@@ -563,7 +563,7 @@
     "        self.mlflow_client.log_param(self.mlflow_run.info.run_id, key, value)\n",
     "\n",
     "    def mlflow_log_metric(self, key, value):\n",
-    "        self.mlflow_client.log_metric(self.mlflow_run.info.run_id, key, value)\n"
+    "        self.mlflow_client.log_metric(self.mlflow_run.info.run_id, key, value)"
    ]
   },
   {
