--- a/notebooks/usage.ipynb
+++ b/notebooks/usage.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "                ('model', RandomForestRegressor(max_depth=1))])"
       ]
      },
-     "execution_count": 0,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 gmanchon  staff  48800 Feb 16 22:24 model.joblib\n"
+      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 17:51 model.joblib\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,6 +132,7 @@
        "    'dropoff_latitude',\n",
        "    'dropoff_longitude'])],\n",
        " 'features__verbose': False,\n",
+       " 'features__verbose_feature_names_out': True,\n",
        " 'features__distance': Pipeline(steps=[('distancetransformer', DistanceTransformer()),\n",
        "                 ('standardscaler', StandardScaler())]),\n",
        " 'features__distance__memory': None,\n",
@@ -146,13 +147,12 @@
        " 'features__distance__standardscaler__with_std': True,\n",
        " 'model__bootstrap': True,\n",
        " 'model__ccp_alpha': 0.0,\n",
-       " 'model__criterion': 'mse',\n",
+       " 'model__criterion': 'squared_error',\n",
        " 'model__max_depth': 1,\n",
        " 'model__max_features': 'auto',\n",
        " 'model__max_leaf_nodes': None,\n",
        " 'model__max_samples': None,\n",
        " 'model__min_impurity_decrease': 0.0,\n",
-       " 'model__min_impurity_split': None,\n",
        " 'model__min_samples_leaf': 1,\n",
        " 'model__min_samples_split': 2,\n",
        " 'model__min_weight_fraction_leaf': 0.0,\n",
@@ -164,7 +164,7 @@
        " 'model__warm_start': False}"
       ]
      },
-     "execution_count": 0,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,50 +182,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'random_forest': GridSearchCV(cv=5,\n",
-       "              estimator=Pipeline(steps=[('features',\n",
-       "                                         ColumnTransformer(transformers=[('distance',\n",
-       "                                                                          Pipeline(steps=[('distancetransformer',\n",
-       "                                                                                           DistanceTransformer()),\n",
-       "                                                                                          ('standardscaler',\n",
-       "                                                                                           StandardScaler())]),\n",
-       "                                                                          ['pickup_latitude',\n",
-       "                                                                           'pickup_longitude',\n",
-       "                                                                           'dropoff_latitude',\n",
-       "                                                                           'dropoff_longitude'])])),\n",
-       "                                        ('model',\n",
-       "                                         RandomForestRegressor(max_depth=1))]),\n",
-       "              param_grid={'features__distance__distancetransformer__distance_type': ['euclidian',\n",
-       "                                                                                     'manhattan'],\n",
-       "                          'features__distance__standardscaler__with_mean': [True,\n",
-       "                                                                            False],\n",
-       "                          'model__max_depth': [1, 2, 3]}),\n",
-       " 'linear_regression': GridSearchCV(cv=5,\n",
-       "              estimator=Pipeline(steps=[('features',\n",
-       "                                         ColumnTransformer(transformers=[('distance',\n",
-       "                                                                          Pipeline(steps=[('distancetransformer',\n",
-       "                                                                                           DistanceTransformer()),\n",
-       "                                                                                          ('standardscaler',\n",
-       "                                                                                           StandardScaler())]),\n",
-       "                                                                          ['pickup_latitude',\n",
-       "                                                                           'pickup_longitude',\n",
-       "                                                                           'dropoff_latitude',\n",
-       "                                                                           'dropoff_longitude'])])),\n",
-       "                                        ('model', LinearRegression())]),\n",
-       "              param_grid={'features__distance__distancetransformer__distance_type': ['euclidian',\n",
-       "                                                                                     'manhattan'],\n",
-       "                          'features__distance__standardscaler__with_mean': [True,\n",
-       "                                                                            False],\n",
-       "                          'model__normalize': [True, False]})}"
+       "GridSearchCV(cv=5,\n",
+       "             estimator={'linear_regression': {'hyper_params': {'features__distance__distancetransformer__distance_type': ['euclidian',\n",
+       "                                                                                                                          'manhattan'],\n",
+       "                                                               'features__distance__standardscaler__with_mean': [True,\n",
+       "                                                                                                                 False],\n",
+       "                                                               'model__normalize': [True,\n",
+       "                                                                                    False]},\n",
+       "                                              'line_count': 1000},\n",
+       "                        'random_forest': {'hyper_params': {'features__distance__distancetransformer__distance_type': ['euclidian',\n",
+       "                                                                                                                      'manhattan'],\n",
+       "                                                           'features__distance__standardscaler__with_mean': [True,\n",
+       "                                                                                                             False],\n",
+       "                                                           'model__max_depth': [1,\n",
+       "                                                                                2,\n",
+       "                                                                                3]},\n",
+       "                                          'line_count': 1000}},\n",
+       "             param_grid={'features__distance__standardscaler__copy': [True],\n",
+       "                         'model__min_samples_leaf': [3],\n",
+       "                         'model__min_weight_fraction_leaf': [0.0, 0.1],\n",
+       "                         'model__oob_score': [True]})"
       ]
      },
-     "execution_count": 0,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,16 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 gmanchon  staff    777 Feb 16 22:24 linear_regression.joblib\n",
-      "-rw-r--r--  1 gmanchon  staff  48800 Feb 16 22:24 model.joblib\n",
-      "-rw-r--r--  1 gmanchon  staff   1302 Feb 16 22:24 random_forest.joblib\n"
+      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 17:51 model.joblib\n"
      ]
     }
    ],
@@ -278,18 +261,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['scoring', 'estimator', 'n_jobs', 'iid', 'refit', 'cv', 'verbose', 'pre_dispatch', 'error_score', 'return_train_score', 'param_grid', 'multimetric_', 'best_index_', 'best_score_', 'best_params_', 'best_estimator_', 'refit_time_', 'scorer_', 'cv_results_', 'n_splits_'])"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'GridSearchCV' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodels\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrandom_forest\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mkeys()\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'GridSearchCV' object is not subscriptable"
+     ]
     }
    ],
    "source": [
@@ -300,18 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6841204518418557"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['random_forest'].best_score_"
    ]
@@ -320,20 +293,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'features__distance__distancetransformer__distance_type': 'euclidian',\n",
-       " 'features__distance__standardscaler__with_mean': False,\n",
-       " 'model__max_depth': 3}"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['random_forest'].best_params_"
    ]
@@ -342,28 +302,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('features',\n",
-       "                 ColumnTransformer(transformers=[('distance',\n",
-       "                                                  Pipeline(steps=[('distancetransformer',\n",
-       "                                                                   DistanceTransformer()),\n",
-       "                                                                  ('standardscaler',\n",
-       "                                                                   StandardScaler(with_mean=False))]),\n",
-       "                                                  ['pickup_latitude',\n",
-       "                                                   'pickup_longitude',\n",
-       "                                                   'dropoff_latitude',\n",
-       "                                                   'dropoff_longitude'])])),\n",
-       "                ('model', RandomForestRegressor(max_depth=3))])"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['random_forest'].best_estimator_"
    ]
@@ -372,18 +311,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.695787104216038"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['linear_regression'].best_score_"
    ]
@@ -392,20 +320,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'features__distance__distancetransformer__distance_type': 'euclidian',\n",
-       " 'features__distance__standardscaler__with_mean': True,\n",
-       " 'model__normalize': True}"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['linear_regression'].best_params_"
    ]
@@ -414,28 +329,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('features',\n",
-       "                 ColumnTransformer(transformers=[('distance',\n",
-       "                                                  Pipeline(steps=[('distancetransformer',\n",
-       "                                                                   DistanceTransformer()),\n",
-       "                                                                  ('standardscaler',\n",
-       "                                                                   StandardScaler())]),\n",
-       "                                                  ['pickup_latitude',\n",
-       "                                                   'pickup_longitude',\n",
-       "                                                   'dropoff_latitude',\n",
-       "                                                   'dropoff_longitude'])])),\n",
-       "                ('model', LinearRegression(normalize=True))])"
-      ]
-     },
-     "execution_count": 0,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "models['linear_regression'].best_estimator_"
    ]
