--- a/notebooks/usage.ipynb
+++ b/notebooks/usage.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "                ('model', RandomForestRegressor(max_depth=1))])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 17:51 model.joblib\n"
+      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 20:58 model.joblib\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        " 'model__warm_start': False}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,35 +182,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "GridSearchCV(cv=5,\n",
-       "             estimator={'linear_regression': {'hyper_params': {'features__distance__distancetransformer__distance_type': ['euclidian',\n",
-       "                                                                                                                          'manhattan'],\n",
-       "                                                               'features__distance__standardscaler__with_mean': [True,\n",
-       "                                                                                                                 False],\n",
-       "                                                               'model__normalize': [True,\n",
-       "                                                                                    False]},\n",
-       "                                              'line_count': 1000},\n",
-       "                        'random_forest': {'hyper_params': {'features__distance__distancetransformer__distance_type': ['euclidian',\n",
-       "                                                                                                                      'manhattan'],\n",
-       "                                                           'features__distance__standardscaler__with_mean': [True,\n",
-       "                                                                                                             False],\n",
-       "                                                           'model__max_depth': [1,\n",
-       "                                                                                2,\n",
-       "                                                                                3]},\n",
-       "                                          'line_count': 1000}},\n",
-       "             param_grid={'features__distance__standardscaler__copy': [True],\n",
-       "                         'model__min_samples_leaf': [3],\n",
-       "                         'model__min_weight_fraction_leaf': [0.0, 0.1],\n",
-       "                         'model__oob_score': [True]})"
+       "{'random_forest': GridSearchCV(cv=5,\n",
+       "              estimator=Pipeline(steps=[('features',\n",
+       "                                         ColumnTransformer(transformers=[('distance',\n",
+       "                                                                          Pipeline(steps=[('distancetransformer',\n",
+       "                                                                                           DistanceTransformer()),\n",
+       "                                                                                          ('standardscaler',\n",
+       "                                                                                           StandardScaler())]),\n",
+       "                                                                          ['pickup_latitude',\n",
+       "                                                                           'pickup_longitude',\n",
+       "                                                                           'dropoff_latitude',\n",
+       "                                                                           'dropoff_longitude'])])),\n",
+       "                                        ('model',\n",
+       "                                         RandomForestRegressor(max_depth=1))]),\n",
+       "              param_grid={'features__distance__distancetransformer__distance_type': ['euclidian',\n",
+       "                                                                                     'manhattan'],\n",
+       "                          'features__distance__standardscaler__with_mean': [True,\n",
+       "                                                                            False],\n",
+       "                          'model__max_depth': [1, 2, 3]}),\n",
+       " 'linear_regression': GridSearchCV(cv=5,\n",
+       "              estimator=Pipeline(steps=[('features',\n",
+       "                                         ColumnTransformer(transformers=[('distance',\n",
+       "                                                                          Pipeline(steps=[('distancetransformer',\n",
+       "                                                                                           DistanceTransformer()),\n",
+       "                                                                                          ('standardscaler',\n",
+       "                                                                                           StandardScaler())]),\n",
+       "                                                                          ['pickup_latitude',\n",
+       "                                                                           'pickup_longitude',\n",
+       "                                                                           'dropoff_latitude',\n",
+       "                                                                           'dropoff_longitude'])])),\n",
+       "                                        ('model', LinearRegression())]),\n",
+       "              param_grid={'features__distance__distancetransformer__distance_type': ['euclidian',\n",
+       "                                                                                     'manhattan'],\n",
+       "                          'features__distance__standardscaler__with_mean': [True,\n",
+       "                                                                            False]})}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,8 +243,7 @@
     "        line_count = 1_000,\n",
     "        hyper_params = dict(\n",
     "            features__distance__distancetransformer__distance_type = ['euclidian', 'manhattan'],\n",
-    "            features__distance__standardscaler__with_mean = [True, False],\n",
-    "            model__normalize = [True, False]\n",
+    "            features__distance__standardscaler__with_mean = [True, False]\n",
     "        )\n",
     "    )\n",
     ")\n",
@@ -244,14 +257,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 17:51 model.joblib\n"
+      "-rw-r--r--  1 bruncky  staff    826 Feb 22 20:59 linear_regression.joblib\n",
+      "-rw-r--r--  1 bruncky  staff  47968 Feb 22 20:58 model.joblib\n",
+      "-rw-r--r--  1 bruncky  staff   1287 Feb 22 20:58 random_forest.joblib\n"
      ]
     }
    ],
@@ -261,19 +276,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'GridSearchCV' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [11]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodels\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrandom_forest\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__dict__\u001b[39m\u001b[38;5;241m.\u001b[39mkeys()\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'GridSearchCV' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "dict_keys(['scoring', 'estimator', 'n_jobs', 'refit', 'cv', 'verbose', 'pre_dispatch', 'error_score', 'return_train_score', 'param_grid', 'multimetric_', 'best_index_', 'best_score_', 'best_params_', 'best_estimator_', 'refit_time_', 'feature_names_in_', 'scorer_', 'cv_results_', 'n_splits_'])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -282,54 +296,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7120389684669391"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['random_forest'].best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'features__distance__distancetransformer__distance_type': 'euclidian',\n",
+       " 'features__distance__standardscaler__with_mean': False,\n",
+       " 'model__max_depth': 3}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['random_forest'].best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('features',\n",
+       "                 ColumnTransformer(transformers=[('distance',\n",
+       "                                                  Pipeline(steps=[('distancetransformer',\n",
+       "                                                                   DistanceTransformer()),\n",
+       "                                                                  ('standardscaler',\n",
+       "                                                                   StandardScaler(with_mean=False))]),\n",
+       "                                                  ['pickup_latitude',\n",
+       "                                                   'pickup_longitude',\n",
+       "                                                   'dropoff_latitude',\n",
+       "                                                   'dropoff_longitude'])])),\n",
+       "                ('model', RandomForestRegressor(max_depth=3))])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['random_forest'].best_estimator_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7327319494306824"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['linear_regression'].best_score_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'features__distance__distancetransformer__distance_type': 'euclidian',\n",
+       " 'features__distance__standardscaler__with_mean': True}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['linear_regression'].best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('features',\n",
+       "                 ColumnTransformer(transformers=[('distance',\n",
+       "                                                  Pipeline(steps=[('distancetransformer',\n",
+       "                                                                   DistanceTransformer()),\n",
+       "                                                                  ('standardscaler',\n",
+       "                                                                   StandardScaler())]),\n",
+       "                                                  ['pickup_latitude',\n",
+       "                                                   'pickup_longitude',\n",
+       "                                                   'dropoff_latitude',\n",
+       "                                                   'dropoff_longitude'])])),\n",
+       "                ('model', LinearRegression())])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "models['linear_regression'].best_estimator_"
    ]
